--- a/abcd.html
+++ b/abcd.html
@@ -70,7 +70,7 @@
 <body>
     <div class="split left">
       <div class="centered">
-        <img src="https://lh3.googleusercontent.com/proxy/gPbiR66BtZexNhg-oqzhJxMIQGMBaP7YiSVSrXuMTDplmhQacDpZ6Jaqrj3iMorlI2hJdU5OAEJy8QxCGZfp3_9okl6eSg0WMeDfb9r-TP3yyMono-p5RIkQsaIceZKiEZ_axFxExkfOL3cW4NMt54n36TFwE4cOnzGVLAc" alt="Avatar woman">
+        <img src="" alt="Avatar woman">
       </div>
     </div>
 
